--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Inventario-Kardex
 excludes=
+file.reference.RSMaterialComponents_3.0.jar=lib\\RSMaterialComponents_3.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.RSMaterialComponents_3.0.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
