--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,11 +34,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Inventario-Kardex
 excludes=
 file.reference.RSMaterialComponents_3.0.jar=lib\\RSMaterialComponents_3.0.jar
+file.reference.RSTableMetro.jar=C:\\Users\\Mario Zelaya\\Documents\\Universidad\\CICLO III\\Programacion II\\Proyectos JAVA\\Proyecto-Final-Ventas\\lib\\RSTableMetro.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.RSMaterialComponents_3.0.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.RSTableMetro.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
