--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Mario Zelaya\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
+file.reference.RSTableMetro.jar=D:\\Programacion\\NetBeansProjects\\Inventario-Kardex\\lib\\RSTableMetro.jar
+user.properties.file=C:\\Users\\Adonay\\AppData\\Roaming\\NetBeans\\12.3\\build.properties
