Creando rama para el modulo de productos

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,12 +35,14 @@ dist.jlink.output=${dist.jlink.dir}/Inventario-Kardex
 excludes=
 file.reference.RSMaterialComponents_3.0.jar=lib\\RSMaterialComponents_3.0.jar
 file.reference.RSTableMetro.jar=C:\\Users\\Mario Zelaya\\Documents\\Universidad\\CICLO III\\Programacion II\\Proyectos JAVA\\Proyecto-Final-Ventas\\lib\\RSTableMetro.jar
+file.reference.RSTableMetro.jar-1=C:\\Users\\pc\\OneDrive\\Documentos\\Clases Por Pandemia\\A\u00f1o 2 - CICLO II\\Estructura de Datos\\RSTableMetro.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.RSMaterialComponents_3.0.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.RSTableMetro.jar}
+    ${file.reference.RSTableMetro.jar}:\
+    ${file.reference.RSTableMetro.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
