--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Mario Zelaya\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
+file.reference.RSTableMetro.jar=C:\\Users\\pc\\OneDrive\\Documentos\\Clases Por Pandemia\\A\u00f1o 2 - CICLO II\\Estructura de Datos\\RSTableMetro.jar
+user.properties.file=C:\\Users\\pc\\AppData\\Roaming\\NetBeans\\8.2rc\\build.properties
