--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Inventario-Kardex
 excludes=
+file.reference.RojeruSan.full_9.6.jar=C:\\Users\\Mario Zelaya\\Downloads\\RojeruSan Librer\u00edas\\RojeruSan Librer\u00edas\\RojeruSan.full_9.6.jar
 file.reference.RSMaterialComponents_3.0.jar=lib\\RSMaterialComponents_3.0.jar
 file.reference.RSTableMetro.jar=C:\\Users\\Mario Zelaya\\Documents\\Universidad\\CICLO III\\Programacion II\\Proyectos JAVA\\Proyecto-Final-Ventas\\lib\\RSTableMetro.jar
 includes=**
@@ -40,7 +41,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.RSMaterialComponents_3.0.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.RSTableMetro.jar}
+    ${file.reference.RSTableMetro.jar}:\
+    ${file.reference.RojeruSan.full_9.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
