--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Inventario-Kardex
 excludes=
+file.reference.Notificacion.jar=lib\\Notificacion.jar
 file.reference.RojeruSan.full_9.4.jar=C:\\Users\\Mario Zelaya\\Downloads\\RojeruSan Librer\u00edas\\RojeruSan Librer\u00edas\\RojeruSan.full_9.4.jar
 file.reference.RojeruSan.full_9.6.jar=C:\\Users\\Mario Zelaya\\Downloads\\RojeruSan Librer\u00edas\\RojeruSan Librer\u00edas\\RojeruSan.full_9.6.jar
 file.reference.RSMaterialComponents_3.0.jar=lib\\RSMaterialComponents_3.0.jar
@@ -44,7 +45,8 @@ javac.classpath=\
     ${file.reference.RSMaterialComponents_3.0.jar}:\
     <<<<<<< HEAD:\
     ${file.reference.RSTableMetro.jar-1}:\
-    ${file.reference.RojeruSan.full_9.4.jar}
+    ${file.reference.RojeruSan.full_9.4.jar}:\
+    ${file.reference.Notificacion.jar}
     ${libs.absolutelayout.classpath}:\
     ${file.reference.RSTableMetro.jar}:\
     ${file.reference.RojeruSan.full_9.6.jar}
