--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,18 +33,42 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Inventario-Kardex
 excludes=
+file.reference.barcodes-7.1.2.jar=lib\\barcodes-7.1.2.jar
+file.reference.font-asian-7.1.2.jar=lib\\font-asian-7.1.2.jar
+file.reference.forms-7.1.2.jar=lib\\forms-7.1.2.jar
+file.reference.hyph-7.1.2.jar=lib\\hyph-7.1.2.jar
+file.reference.io-7.1.2.jar=lib\\io-7.1.2.jar
+file.reference.kernel-7.1.2.jar=lib\\kernel-7.1.2.jar
+file.reference.layout-7.1.2.jar=lib\\layout-7.1.2.jar
+file.reference.pdfa-7.1.2.jar=lib\\pdfa-7.1.2.jar
+file.reference.pdftest-7.1.2.jar=lib\\pdftest-7.1.2.jar
 file.reference.RojeruSan.full_9.4.jar=C:\\Users\\Mario Zelaya\\Downloads\\RojeruSan Librer\u00edas\\RojeruSan Librer\u00edas\\RojeruSan.full_9.4.jar
 file.reference.RojeruSan.full_9.6.jar=C:\\Users\\Mario Zelaya\\Downloads\\RojeruSan Librer\u00edas\\RojeruSan Librer\u00edas\\RojeruSan.full_9.6.jar
 file.reference.RojeruSan.full_9.6.jar-1=lib\\RojeruSan.full_9.6.jar
 file.reference.RSMaterialComponents_3.0.jar=lib\\RSMaterialComponents_3.0.jar
 file.reference.RSTableMetro.jar-1=lib\\RSTableMetro.jar
+file.reference.sign-7.1.2.jar=lib\\sign-7.1.2.jar
+file.reference.slf4j-api-1.7.25.jar=lib\\slf4j-api-1.7.25.jar
+file.reference.slf4j-simple-1.7.25.jar=lib\\slf4j-simple-1.7.25.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.RSMaterialComponents_3.0.jar}:\
     <<<<<<< HEAD:\
     ${file.reference.RSTableMetro.jar-1}:\
-    ${file.reference.RojeruSan.full_9.6.jar-1}
+    ${file.reference.RojeruSan.full_9.6.jar-1}:\
+    ${file.reference.barcodes-7.1.2.jar}:\
+    ${file.reference.font-asian-7.1.2.jar}:\
+    ${file.reference.forms-7.1.2.jar}:\
+    ${file.reference.hyph-7.1.2.jar}:\
+    ${file.reference.io-7.1.2.jar}:\
+    ${file.reference.kernel-7.1.2.jar}:\
+    ${file.reference.layout-7.1.2.jar}:\
+    ${file.reference.pdfa-7.1.2.jar}:\
+    ${file.reference.pdftest-7.1.2.jar}:\
+    ${file.reference.sign-7.1.2.jar}:\
+    ${file.reference.slf4j-api-1.7.25.jar}:\
+    ${file.reference.slf4j-simple-1.7.25.jar}
     <<<<<<< HEAD:\
     ${file.reference.RSTableMetro.jar-1}:\
     ${file.reference.RojeruSan.full_9.4.jar}
