--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,4 @@
 compile.on.save=true
 file.reference.RSTableMetro.jar=D:\\Programacion\\NetBeansProjects\\Inventario-Kardex\\lib\\RSTableMetro.jar
+file.reference.RSTableMetro.jar-1=C:\\Users\\Adonay\\OneDrive\\Escritorio\\Inventario-Kardex\\lib\\RSTableMetro.jar
 user.properties.file=C:\\Users\\Adonay\\AppData\\Roaming\\NetBeans\\12.3\\build.properties
