--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,7 +41,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.RSMaterialComponents_3.0.jar}:\
     ${file.reference.AbsoluteLayout.jar}:\
-    ${file.reference.RSTableMetro.jar-1}
+    ${file.reference.RSTableMetro.jar-1}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
